# AnansiNet

./: .gitignore  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Containerfile  Containerfile.debian  LICENSE.md  README.md
AnansiNet/: components.json  package.json  svelte.config.js  tsconfig.json  vite.config.js
AnansiNet/src/: app.css
AnansiNet/src-tauri/: Cargo.toml  pyproject.toml  tauri.conf.json
AnansiNet/src-tauri/python/anansinet/: __init__.py  __main__.py
AnansiNet/src-tauri/python/anansinet/models/: Host.py
AnansiNet/src-tauri/python/anansinet/networking/: utils.py
AnansiNet/src-tauri/src/: lib.rs  main.rs
AnansiNet/src/lib/components/navigation/: app-header.svelte  app-sidebar.svelte
AnansiNet/src/lib/components/ui/button/: button.svelte
AnansiNet/src/lib/components/ui/sidebar/: sidebar-rail.svelte
AnansiNet/src/routes/: +layout.svelte  +page.svelte
AnansiNet/src/shared/components/navigation/: app-header.svelte  app-sidebar.svelte
AnansiNet/src/shared/components/ui/button/: button.svelte
AnansiNet/src/shared/components/ui/button-group/: button-group-separator.svelte  button-group-text.svelte  button-group.svelte
AnansiNet/src/shared/components/ui/checkbox/: checkbox.svelte
AnansiNet/src/shared/components/ui/dropdown-menu/: dropdown-menu-checkbox-item.svelte  dropdown-menu-content.svelte  dropdown-menu-group-heading.svelte  dropdown-menu-item.svelte  dropdown-menu-label.svelte  dropdown-menu-radio-item.svelte  dropdown-menu-separator.svelte  (+3 more)
AnansiNet/src/shared/config/: routes.ts
docs/: development.md
(+40 files in other folders)
